# caliper

./: CMakeLists.txt
src/: ffmpeg_runner.cpp  ffmpeg_runner.h  job_manager.cpp  job_manager.h  main.cpp  ui_manager.cpp  ui_manager.h  window_manager.cpp  window_manager.h
